# provenance-to-use

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  config.h.in  ptu-audit  ptu-exec  run.sh  slave.sh
criu/compel/src/lib/: infect.c
criu/criu/: cgroup.c  cr-dump.c  cr-restore.c  crtools.c  file-ids.c  pstree.c  seize.c  tty.c
criu/criu/include/: kcmp-ids.h
first-draft/: paths-test
kernel/: kernel.json  sciunit_tree.py  subkernel.py
kernel/sciunit_kernel/: __main__.py
leveldb-1.14.0/: Makefile  build_detect_platform
mytest/: tbash.sh  tjava.sh
mytest/1kfiles/: fork.c
mytest/bash/: cde.options  hello.txt  my_1st_exp.sh  my_2nd_exp.sh  process.py  run.sh  s01.create_1st_pkg.sh  s02.rerun_1st_exp.sh  s02.run_1st_exp.sh  s03.run_2nd_exp.sh  s04.append_2nd_pkg.sh  s06.make_graph.sh
mytest/javart/: TestExecLs.java
mytest/long/: run.sh  start.sh
mytest/mpich2/: exp.sh  host_file  rrun.sh  run.sh
mytest/multiio/: multiio.c
mytest/multirepo_paper/: my_1st_exp.sh  process.py  run.sh  s01.create_1st_pkg.sh  s03.run_2nd_exp.sh  s05.rerun_2nd_exp.sh
mytest/net/: Makefile  c.c  crerun.sh  run.sh  s.c  srerun.sh
mytest/pipe/: run.sh
mytest/scale-sim/: aggregate.py  analyze.py  cslist.txt  exp.sh  run.sh  single_lauch.sh  split.py  time.sh
mytest/sendmsg/: arun.sh  brun.sh  crun.sh  msg.c  rbrun.sh  rcrun.sh  sendmsg.c
mytest/swiftsort/: merge2.pl  sort.swift  split.sh  tc.data
mytest/wget/: rrun.sh  run.sh
readelf-mini/: readelf-mini.c
readme/: ptu-architecture.odg
scripts/: cde_script_utils.py  checkpid.py  copy_shared_libs_into_package.py  create_ELF_wrapper.py  db2dot.py  db2timeline.py  graphcmp.py  okapi_dir.py  package_completer.py  pickle_message_generator.py  plot_dir_structure.py  printdb.py  prov2dot.py  runpid.py  slave.sh  stopslave.sh  wrap_all_ELF_executables.py
scripts/coalesce/: coalesce.py
server/: Makefile  hashtable.c  hashtable.h  server.c  server.h
strace-4.6/: Makefile.am  Makefile.in  aclocal.m4  cde.c  cde.h  cdenet.c  cdenet.h  config.h  config.h.in  configure  const.h  db.c  db.h  defs.h  desc.c  file.c  io.c  ioctl.c  multi.c  multi.h  net.c  okapi.c  okapi.h  perftimers.c  perftimers.h  printenv.c  process.c  provenance.c  provenance.h  shellutils.c  shellutils.h  signal.c  strace.c  stream.c  strutils.c  strutils.h  syscall.c  syslimits.c  syslimits.h  time.c  (+6 more)
strace-4.6/linux/i386/: syscallent.h
strace-4.6/tests/: Makefile.in
tests/: cde_test_common.py  perftimers_test.cpp  shellutils_test.cpp  strutils_test.cpp  syslimits_test.cpp  testharness.cpp  versioning_graph_test.cpp  versioning_test.cpp
tests/CDE-bootstrap/: testme.py
tests/argv_test/: print_argv.py  testme.py
tests/at_syscalls_test/: testme.py
tests/basic_python/: file_io.py
tests/chdir_abspath_malicious_test/: testme.py
tests/chdir_abspath_test/: testme.py
tests/chdir_relpath_test/: testme.py
tests/chdir_test/: chdir_test.py  testme.py
tests/coreutils_pwd_test/: testme-DOES-NOT-WORK.py
tests/directory_symlink_test/: testme.py
tests/directory_symlink_test_2/: testme.py
tests/directory_symlink_test_3/: testme.py
tests/epd-test/: simple.py
tests/getcwd_exec_test/: getcwd_exec_test.py  testme.py
tests/java_test/: testme.py
tests/legacy_pytests/: run_all_tests.py
tests/legacy_pytests/basic_python/: testme.py
tests/legacy_pytests/chdir_abspath_malicious_test/: chdir_abspath_malicious_test.py
tests/legacy_pytests/chdir_abspath_test/: chdir_abspath_test.py
tests/legacy_pytests/chdir_relpath_test/: chdir_relpath_test.py
tests/legacy_pytests/coreutils_pwd_test/: testme.py
tests/legacy_pytests/epd-test/: mpl.py
tests/legacy_pytests/link_test/: link.py
tests/legacy_pytests/multiple_symlink_levels/: testme.py
tests/legacy_pytests/mytest/long/: rrun.sh
tests/legacy_pytests/mytest/mpich2/: run.sh
tests/legacy_pytests/path-library-test/: paths_test.c
tests/legacy_pytests/readlink_abspath_test/: readlink_abspath_test.py
tests/legacy_pytests/rename_test/: testme.py
tests/legacy_pytests/script_exe_test_2/: run_python_script.py
tests/legacy_pytests/socket_test/: server.py
tests/legacy_pytests/sockets/: Makefile  client.c  server.c
tests/legacy_pytests/static_binary_test/: testme.py
tests/legacy_pytests/subprocess_1/: numpy_scipy_test.py  subprocess_test.py
tests/legacy_pytests/subprocess_2/: subprocess_2.py
tests/legacy_pytests/symlink_absolute_test/: symlink_absolute_test.py
tests/legacy_pytests/symlink_test/: symlink.py
tests/link_test/: testme.py
tests/mkdir_test/: mkdir_test.py  testme.py
tests/mkfifo_test/: testme.py
tests/mytest/bash/: my_2nd_exp.sh  process.py
tests/mytest/javart/: TestExec.java  TestExecLs.java  cde.options
tests/mytest/long/: rrun.sh  start.sh
tests/mytest/mpich2/: exp.sh  rrun.sh
tests/mytest/multiio/: run.sh
tests/mytest/multirepo_paper/: hello.txt
tests/mytest/net/: srerun.sh  ss.c
tests/mytest/scale-sim/: split.py  time.sh
tests/mytest/sendmsg/: msg.c  rarun.sh  rcrun.sh  recvmsg.c
tests/mytest/swiftsort/: cde.sh  clean.sh  sort.swift  tc.data
tests/mytest/wget/: rrun.sh  run.sh
tests/proc_maps_test/: proc_maps_test.py  testme.py
tests/proc_self_cwd_test/: testme.py
tests/proc_self_exe_test/: testme.py
tests/proc_self_pid_exe_test/: proc_self_pid_exe_test.py  testme.py
tests/pwd_exec_test/: testme.py
tests/pwd_readfile_test/: pwd_readfile_test.py  testme.py
tests/readlink_abspath_test/: testme.py
tests/relative_paths/: relative_paths.py  testme.py
tests/rename_test/: rename.py
tests/rmdir_test/: rmdir_test.py  testme.py
tests/script_exe_test/: testme.py
tests/script_exe_test_2/: testme.py
tests/script_exe_test_3/: testme.py
tests/script_exe_test_big_argv/: testme.py
tests/socket_test/: client.py  testme.py
tests/sockets/: cde.bashsocket.tgz  cde.socket.tgz  client  server  test.sh
tests/subprocess_1/: testme.py
tests/subprocess_2/: testme.py
tests/symlink_absolute_test/: testme.py
tests/symlink_test/: testme.py
tests/uname_test/: testme.py
(+8 files in other folders)
